PSD#226188 - Configured write off accounting set for repay was not executed while schedule payment when loan was written-off